# AI_ML_project

./: .env.example  .gitignore  README.md  app.py  app_final.py  model.ipynb  netlify.toml  pyproject.toml  requirements.txt  tfidf_vectorizer.joblib
config/: config.py  settings.py
milestone1/: README.md  app.py  svm_model.joblib  tfidf_vectorizer.joblib
milestone2/agent/: __init__.py  graph.py  predictor.py  reasoner.py  report_generator.py
models/: model.py
src/: app.py  index.py  train.py
utils/: data_loader.py  feature_extraction.py  preprocess.py  preprocessing.py
