[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-classifier"
version = "1.0.0"
description = "AI-powered fake news detection system"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0"
]

[project.scripts]
train = "src.train:train_model"
